---
source: src/mailer/template.rs
expression: template.render(&args)
---
Ok(
    Content {
        subject: "Test Can render test template\n",
        text: "Welcome to test: Can render test template,\n\n  http://localhost/verify/<%= verifyToken %>\n",
        html: ";<html>\n\n<body>\n  This is a test content\n  <a href=\"http://localhost:/verify/1111-2222-3333-4444\">\n    Some test\n  </a>\n</body>\n\n</html>\n",
    },
)
